<resources>
    <string name="app_name">OneKK</string>
    <string name="input">Input:</string>
    <string name="weight">Weight:</string>
    <string name="nullStr">null</string>
    <string name="not_connected">null</string>
    <string name="view_data_activity">View Data Activity</string>
    <string name="add">Add</string>
    <string name="export">Export data</string>
    <string name="clear_data">Clear data</string>
    <string name="reset_data">Reset data</string>
    <string name="sample">Sample</string>
    <string name="countAbr">Count</string>
    <string name="lengthAbr">Length</string>
    <string name="widthAbr">Width</string>
    <string name="weightAbr">Weight</string>
    <string name="coin_data">Coin Data</string>
    <string name="coin_data_activity">Coin Data Activity</string>
    <string name="secondary">Secondary</string>
    <string name="nominal">Nominal</string>
    <string name="coin_diameter">Coin Diameter</string>
    <string name="view_data">View Data</string>
    <string name="coinrecognition">Coin recognition</string>
    <string name="samples">Samples</string>
    <string name="connect_scale_title">Connect scale</string>
    <string name="help">Help</string>
    <string name="about_title">About</string>
    <string name="report">Report</string>
    <string name="versiontitle">Version</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="delete_msg_1">This will delete all samples and seeds associated with</string>
    <string name="delete_msg_2">Do you wish to proceed?</string>
    <string name="delete_msg_3">This will delete the coin </string>
    <string name="analyze">Analyze</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="analysis_preview">Analysis Preview</string>
    <string name="set_person">Set Person</string>
    <string name="no_blank">Names cannot be left blank.</string>
    <string name="person_set">Person set as:</string>
    <string name="reset_coin_database">"This will reset all data from the coin database. Proceed?"</string>
    <string name="delete_database">"This will delete all data from the database. Proceed?"</string>
    <string name="data_deleted">"Data deleted"</string>
    <string name="export_choice">Export raw data or sample summaries?</string>
    <string name="export_raw">Raw data</string>
    <string name="export_all">All data</string>
    <string name="export_summaries">Sample summaries</string>
    <string name="export_data">Export data</string>
    <string name="export_coins">Are you sure you want to export Coin data?</string>
    <string name="share">Share File</string>
    <string name="share_file">Do you want to share the exported file?</string>
    <string name="about">About OneKK</string>
    <string name="dev_trevor">Trevor Rife</string>
    <string name="ksu">Kansas State University</string>
    <string name="dev_trevor_email">trife@ksu.edu</string>
    <string name="dev_megan_email">megzcalvert@ksu.edu</string>
    <string name="dev_jesse">Jesse Poland</string>
    <string name="dev_jesse_email">jpoland@ksu.edu</string>
    <string name="wg_site">http://wheatgenetics.org\n</string>
    <string name="onekk_libraries">OneKK uses code from the following open source projects:</string>
    <string name="library_touchimageview">TouchImageView https://github.com/MikeOrtiz/TouchImageView</string>
    <string name="library_opencsv">opencsv http://opencsv.sourceforge.net</string>
    <string name="otherapps">Other Apps</string>
    <string name="processing">Processing</string>
    <string name="seed_size_range">Seed Size Range (Optional)</string>
    <string name="display_analysis">Show analysis preview</string>
    <string name="background_color">Background Color </string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="ask_processing_technique">Always Ask</string>
    <string name="types_processing_techniques">Processing Techniques </string>
    <string name="color_threshold">Color Threshold </string>
    <string name="hue_range">Hue Range</string>
    <string name="min_hue_value">Minimum Hue value</string>
    <string name="max_hue_value">Maximum Hue Value</string>
    <string name="min_size">Minimum seed size </string>
    <string name="max_size">Maximum seed size </string>
    <string name="threshold">Threshold</string>
    <string name="ask_background_processing">Background processing</string>
    <string name="ask_multi_processing">Multi processing</string>
    <string name="background_multi_processing">Background and Multi processing</string>
    <string name="coin_size">Coin Type</string>
    <string name="country">Country </string>
    <string name="currency">Currency </string>
    <string name="coin_name">Coin Name </string>
    <string name="value">Value </string>
    <string name="coin_edit_save">Save</string>
    <string name="no_scale">Scale Not Found</string>
    <string name="connect_scale">Please connect scale with OTG cable and turn the scale on</string>
    <string name="try_again">Try Again</string>
    <string name="ignore">Ignore</string>
    <string name="scale_disconnect">Scale disconnected</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="collector">Collector</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="updatemsg">Changelog</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="required">Required</string>
    <string name="sample_input_image">Sample input image</string>
    <string name="processing_settings">Processing settings</string>
    <string name="log">Log</string>
    <string name="Optional">Optional</string>
    <string name="include_screenshot">Include screenshot</string>
    <string name="sample_analyzed_image">Sample analyzed image</string>
    <string name="sample_data">Sample data</string>
    <string name="expected_seed_count">Expected seed count</string>
    <string name="additional_information">Additional information</string>
    <string name="label_data">Data:</string>
    <string name="label_device_name">Device name:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="record_weight">Record Weight</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_data_table">Data Table</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_seed_data">Seed Data</string>
    <string name="tab_coin_data">Coin Data</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="new_message_notification_title_template">Sample Name : %1$s</string>
    <string name="new_message_notification_placeholder_text_template">%1$s
    </string>
    <string name="scale_fragment_label">Use a scale to correlate images to weight.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_report">Report</string>
    <string name="intro_title_1">Intro Title 1</string>
    <string name="intro_title_2">Intro Title 2</string>
    <string name="intro_title_3">Intro Title 3</string>
    <string name="intro_body_1">Intro Body 1</string>
    <string name="intro_body_2">Intro Body 2</string>
    <string name="intro_body_3">Intro Body 3</string>
    <string name="nav_label_settings">Settings Fragment</string>
    <string name="nav_label_camera_preview">Camera Preview Fragment</string>
    <string name="double_back_press">Double press back button to exit.</string>
    <string name="ask_coin_recognition_ok">Analysis Complete</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="analysis_fragment_label">Analysis Fragment</string>
    <string name="bluetooth_le_scanner_unavailable">Bluetooth Le Scanner not found.</string>
    <string name="print">Connect to a Bluetooth device.</string>
    <string name="device_recycler_view_header_scale_fragment">Local BLE Devices</string>
    <string name="loading">Loading…</string>
    <string name="frag_setting_scale_settings">Scale Settings</string>
    <string name="enable_bluetooth">Available Devices</string>
    <string name="preferences_enable_bluetooth_key">org.wheatgenetics.onekk.BLUETOOTH_ENABLED</string>
    <string name="preferences_saved_device_name_key">org.wheatgenetics.onekk.BLUETOOTH_DEVICE</string>
    <string name="devices">devices</string>
    <string name="onekk_preference_key">ONEKK_PREFERENCES</string>
    <string name="onekk_preference_mode_key">org.wheatgenetics.onekk.SCALE_STEPS</string>
    <string name="onekk_preference_algorithm_mode_key">org.wheatgenetics.onekk.ANALYSIS_ALGORITHM</string>
    <string name="onekk_first_load_ask_mac_address">org.wheatgenetics.onekk.FIRST_LOAD_ADDRESS</string>
    <string name="frag_scale_no_mac_address_found_message">Please choose a BLE device in the Settings.</string>
    <string name="dialog_choose_ble_device_title">Please choose a BLE device.</string>
    <string name="frag_camera_not_enough_coins_found">Not enough coins found, please have at least four in the image.</string>
    <string name="frag_camera_coins_maybe_plural">coin(s)</string>
    <string name="nav_label_experiment_list">Experiment Fragment</string>
    <string name="nav_cam_title">Camera</string>
    <string name="menu_action_to_analysis_manager">Samples</string>
    <string name="nav_drawer_title_import">Import</string>
    <string name="settings">Settings</string>
    <string name="nav_bot_about">About</string>
</resources>