<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_samples"
        android:icon="@drawable/ic_samples"
        android:title="@string/samples" />

    <item
        android:id="@+id/view_data"
        android:icon="@drawable/ic_data_view"
        android:title="@string/view_data"/>

    <item
        android:id="@+id/choose_photo"
        android:icon="@drawable/ic_choose_photo"
        android:title="Choose Photo" />

    <item
        android:id="@+id/nav_scale"
        android:icon="@drawable/ic_usb"
        android:title="Scale" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about_title" />
</menu>