<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <PreferenceCategory
        android:title="@string/required">

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="false"
            android:icon="@drawable/ic_photo_size_select_large_black_24dp"
            android:key="org.wheatgenetics.onekk.SAMPLE_INPUT_IMAGE"
            android:persistent="false"
            android:summary="image of the sample captured"
            android:title="@string/sample_input_image" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="false"
            android:icon="@drawable/ic_build_black_24dp"
            android:key="org.wheatgenetics.onekk.PROCESSING_SETTINGS"
            android:persistent="false"
            android:summary="settings used in processing the sample"
            android:title="@string/processing_settings" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="false"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:key="org.wheatgenetics.onekk.LOG"
            android:persistent="false"
            android:summary="log data generated for the sample processing"
            android:title="@string/log" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Optional">

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_image_black_24dp"
            android:key="org.wheatgenetics.onekk.INCLUDE_SCREENSHOT"
            android:summary="check this for UI issues"
            android:title="@string/include_screenshot" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_collections_black_24dp"
            android:key="org.wheatgenetics.onekk.SAMPLE_ANALYZED_IMAGE"
            android:summary="check this for processed sample issues"
            android:title="@string/sample_analyzed_image" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:key="org.wheatgenetics.onekk.SAMPLE_DATA"
            android:summary="check this for data related issues"
            android:title="@string/sample_data" />

        <EditTextPreference
            android:defaultValue="-1"
            android:icon="@drawable/ic_plus_one_black_24dp"
            android:key="org.wheatgenetics.onekk.EXP_SEED_COUNT"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="enter the seed count if available"
            android:title="Expected seed count" />

        <EditTextPreference
            android:defaultValue=" "
            android:icon="@drawable/ic_message_black_24dp"
            android:key="org.wheatgenetics.onekk.ADD_INFO"
            android:scrollbars="vertical"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:summary="additional details related to the issue"
            android:title="Additional information" />
    </PreferenceCategory>

</PreferenceScreen>