<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@+id/camera_preview_fragment">

    <fragment
        android:id="@+id/scale_fragment"
        android:name="org.wheatgenetics.onekk.fragments.ScaleFragment"
        android:label="@string/scale_fragment_label">
        <argument android:name="experiment"
            android:defaultValue="-1"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/analysis_fragment"
        android:name="org.wheatgenetics.onekk.fragments.AnalysisFragment"
        android:label="@string/analysis_fragment_label">
        <argument android:name="experiment"
            android:defaultValue="-1"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/settings_fragment"
        android:name="org.wheatgenetics.onekk.fragments.SettingsFragment"
        android:label="@string/nav_label_settings"/>

    <fragment
        android:id="@+id/camera_preview_fragment"
        android:name="org.wheatgenetics.onekk.fragments.CameraFragment"
        android:label="@string/nav_label_camera_preview">

        <action android:id="@+id/action_to_analysis"
            app:destination="@id/analysis_fragment"/>

        <action android:id="@+id/action_to_scale"
            app:destination="@id/scale_fragment"/>
    </fragment>

    <action
        android:id="@+id/action_to_settings"
        app:destination="@id/settings_fragment"
        app:popUpTo="@id/camera_preview_fragment">
    </action>

</navigation>